Location and route routes.
